--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,8 @@
 /apertium-tt-ky.tt-ky.t2x -text
 /apertium-tt-ky.tt-ky.t3x -text
 /input -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
